trunk/antlr/antlrAssign/src/com/dhenton9000/assign/parsers/AssignNWSParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g 2011-03-23 12:24:41

  package com.dhenton9000.assign.parsers;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class AssignNWSParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "USING", "IDENT", "IF", "THEN", "ELSE", "ENDIF", "AND", "OR", "BECOMES", "TRUE", "FALSE", "VALUE", "STRING", "DOT_OP", "VAR", "IMPLICIT_VAR", "COMMENT", "WS", "ESC_SEQ", "CHAR", "LETTER", "DIGIT", "PROGRAM", "'END_USING'", "'<>'", "'=='", "'!='", "'>'", "'>='", "'<'", "'<='"
    };
    public static final int EOF=-1;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int USING=4;
    public static final int IDENT=5;
    public static final int IF=6;
    public static final int THEN=7;
    public static final int ELSE=8;
    public static final int ENDIF=9;
    public static final int AND=10;
    public static final int OR=11;
    public static final int BECOMES=12;
    public static final int TRUE=13;
    public static final int FALSE=14;
    public static final int VALUE=15;
    public static final int STRING=16;
    public static final int DOT_OP=17;
    public static final int VAR=18;
    public static final int IMPLICIT_VAR=19;
    public static final int COMMENT=20;
    public static final int WS=21;
    public static final int ESC_SEQ=22;
    public static final int CHAR=23;
    public static final int LETTER=24;
    public static final int DIGIT=25;
    public static final int PROGRAM=26;

    // delegates
    // delegators


        public AssignNWSParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public AssignNWSParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return AssignNWSParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g"; }


    public static class program_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:24:1: program : ( statements )+ -> ^( PROGRAM ( statements )+ ) ;
    public final AssignNWSParser.program_return program() throws RecognitionException {
        AssignNWSParser.program_return retval = new AssignNWSParser.program_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        AssignNWSParser.statements_return statements1 = null;


        RewriteRuleSubtreeStream stream_statements=new RewriteRuleSubtreeStream(adaptor,"rule statements");
        try {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:24:9: ( ( statements )+ -> ^( PROGRAM ( statements )+ ) )
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:27:2: ( statements )+
            {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:27:2: ( statements )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==USING||LA1_0==IF) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:27:3: statements
            	    {
            	    pushFollow(FOLLOW_statements_in_program61);
            	    statements1=statements();

            	    state._fsp--;

            	    stream_statements.add(statements1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            // AST REWRITE
            // elements: statements
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 27:16: -> ^( PROGRAM ( statements )+ )
            {
                // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:27:20: ^( PROGRAM ( statements )+ )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROGRAM, "PROGRAM"), root_1);

                if ( !(stream_statements.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_statements.hasNext() ) {
                    adaptor.addChild(root_1, stream_statements.nextTree());

                }
                stream_statements.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class statements_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "statements"
    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:29:1: statements : ( ifStatement | usingStatement );
    public final AssignNWSParser.statements_return statements() throws RecognitionException {
        AssignNWSParser.statements_return retval = new AssignNWSParser.statements_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        AssignNWSParser.ifStatement_return ifStatement2 = null;

        AssignNWSParser.usingStatement_return usingStatement3 = null;



        try {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:30:2: ( ifStatement | usingStatement )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IF) ) {
                alt2=1;
            }
            else if ( (LA2_0==USING) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:30:4: ifStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_ifStatement_in_statements84);
                    ifStatement2=ifStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, ifStatement2.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:30:18: usingStatement
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_usingStatement_in_statements88);
                    usingStatement3=usingStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, usingStatement3.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "statements"

    protected static class usingStatement_scope {
        String idTokenText;
        Token idToken;
    }
    protected Stack usingStatement_stack = new Stack();

    public static class usingStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "usingStatement"
    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:32:1: usingStatement : USING identVar= IDENT ( implicitIfStatement )+ 'END_USING' -> ( implicitIfStatement )+ ;
    public final AssignNWSParser.usingStatement_return usingStatement() throws RecognitionException {
        usingStatement_stack.push(new usingStatement_scope());
        AssignNWSParser.usingStatement_return retval = new AssignNWSParser.usingStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token identVar=null;
        Token USING4=null;
        Token string_literal6=null;
        AssignNWSParser.implicitIfStatement_return implicitIfStatement5 = null;


        CommonTree identVar_tree=null;
        CommonTree USING4_tree=null;
        CommonTree string_literal6_tree=null;
        RewriteRuleTokenStream stream_USING=new RewriteRuleTokenStream(adaptor,"token USING");
        RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleSubtreeStream stream_implicitIfStatement=new RewriteRuleSubtreeStream(adaptor,"rule implicitIfStatement");
        try {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:39:2: ( USING identVar= IDENT ( implicitIfStatement )+ 'END_USING' -> ( implicitIfStatement )+ )
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:40:2: USING identVar= IDENT ( implicitIfStatement )+ 'END_USING'
            {
            USING4=(Token)match(input,USING,FOLLOW_USING_in_usingStatement108);  
            stream_USING.add(USING4);

            identVar=(Token)match(input,IDENT,FOLLOW_IDENT_in_usingStatement113);  
            stream_IDENT.add(identVar);

            ((usingStatement_scope)usingStatement_stack.peek()).idTokenText = (identVar!=null?identVar.getText():null); ((usingStatement_scope)usingStatement_stack.peek()).idToken = identVar;   
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:41:3: ( implicitIfStatement )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IF) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:41:4: implicitIfStatement
            	    {
            	    pushFollow(FOLLOW_implicitIfStatement_in_usingStatement120);
            	    implicitIfStatement5=implicitIfStatement();

            	    state._fsp--;

            	    stream_implicitIfStatement.add(implicitIfStatement5.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);

            string_literal6=(Token)match(input,27,FOLLOW_27_in_usingStatement128);  
            stream_27.add(string_literal6);



            // AST REWRITE
            // elements: implicitIfStatement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 46:7: -> ( implicitIfStatement )+
            {
                if ( !(stream_implicitIfStatement.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_implicitIfStatement.hasNext() ) {
                    adaptor.addChild(root_0, stream_implicitIfStatement.nextTree());

                }
                stream_implicitIfStatement.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            usingStatement_stack.pop();
        }
        return retval;
    }
    // $ANTLR end "usingStatement"

    public static class implicitIfStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "implicitIfStatement"
    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:51:1: implicitIfStatement : IF implicit_comparison THEN (strue2+= implicit_assignment )+ ( ELSE (sfalse2+= implicit_assignment )+ )? ENDIF -> ^( IF ^( TRUE ( $strue2)+ ) ( ^( FALSE ( $sfalse2)+ ) )? implicit_comparison ) ;
    public final AssignNWSParser.implicitIfStatement_return implicitIfStatement() throws RecognitionException {
        AssignNWSParser.implicitIfStatement_return retval = new AssignNWSParser.implicitIfStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IF7=null;
        Token THEN9=null;
        Token ELSE10=null;
        Token ENDIF11=null;
        List list_strue2=null;
        List list_sfalse2=null;
        AssignNWSParser.implicit_comparison_return implicit_comparison8 = null;

        RuleReturnScope strue2 = null;
        RuleReturnScope sfalse2 = null;
        CommonTree IF7_tree=null;
        CommonTree THEN9_tree=null;
        CommonTree ELSE10_tree=null;
        CommonTree ENDIF11_tree=null;
        RewriteRuleTokenStream stream_ENDIF=new RewriteRuleTokenStream(adaptor,"token ENDIF");
        RewriteRuleTokenStream stream_THEN=new RewriteRuleTokenStream(adaptor,"token THEN");
        RewriteRuleTokenStream stream_ELSE=new RewriteRuleTokenStream(adaptor,"token ELSE");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleSubtreeStream stream_implicit_assignment=new RewriteRuleSubtreeStream(adaptor,"rule implicit_assignment");
        RewriteRuleSubtreeStream stream_implicit_comparison=new RewriteRuleSubtreeStream(adaptor,"rule implicit_comparison");
        try {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:54:2: ( IF implicit_comparison THEN (strue2+= implicit_assignment )+ ( ELSE (sfalse2+= implicit_assignment )+ )? ENDIF -> ^( IF ^( TRUE ( $strue2)+ ) ( ^( FALSE ( $sfalse2)+ ) )? implicit_comparison ) )
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:55:2: IF implicit_comparison THEN (strue2+= implicit_assignment )+ ( ELSE (sfalse2+= implicit_assignment )+ )? ENDIF
            {
            IF7=(Token)match(input,IF,FOLLOW_IF_in_implicitIfStatement175);  
            stream_IF.add(IF7);

            pushFollow(FOLLOW_implicit_comparison_in_implicitIfStatement178);
            implicit_comparison8=implicit_comparison();

            state._fsp--;

            stream_implicit_comparison.add(implicit_comparison8.getTree());
            THEN9=(Token)match(input,THEN,FOLLOW_THEN_in_implicitIfStatement183);  
            stream_THEN.add(THEN9);

            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:56:3: (strue2+= implicit_assignment )+
            int cnt4=0;
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==IDENT||LA4_0==DOT_OP) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:56:4: strue2+= implicit_assignment
            	    {
            	    pushFollow(FOLLOW_implicit_assignment_in_implicitIfStatement191);
            	    strue2=implicit_assignment();

            	    state._fsp--;

            	    stream_implicit_assignment.add(strue2.getTree());
            	    if (list_strue2==null) list_strue2=new ArrayList();
            	    list_strue2.add(strue2.getTree());


            	    }
            	    break;

            	default :
            	    if ( cnt4 >= 1 ) break loop4;
                        EarlyExitException eee =
                            new EarlyExitException(4, input);
                        throw eee;
                }
                cnt4++;
            } while (true);

            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:58:2: ( ELSE (sfalse2+= implicit_assignment )+ )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ELSE) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:58:3: ELSE (sfalse2+= implicit_assignment )+
                    {
                    ELSE10=(Token)match(input,ELSE,FOLLOW_ELSE_in_implicitIfStatement199);  
                    stream_ELSE.add(ELSE10);

                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:58:9: (sfalse2+= implicit_assignment )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==IDENT||LA5_0==DOT_OP) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:58:10: sfalse2+= implicit_assignment
                    	    {
                    	    pushFollow(FOLLOW_implicit_assignment_in_implicitIfStatement205);
                    	    sfalse2=implicit_assignment();

                    	    state._fsp--;

                    	    stream_implicit_assignment.add(sfalse2.getTree());
                    	    if (list_sfalse2==null) list_sfalse2=new ArrayList();
                    	    list_sfalse2.add(sfalse2.getTree());


                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);


                    }
                    break;

            }

            ENDIF11=(Token)match(input,ENDIF,FOLLOW_ENDIF_in_implicitIfStatement212);  
            stream_ENDIF.add(ENDIF11);



            // AST REWRITE
            // elements: sfalse2, IF, implicit_comparison, strue2
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: sfalse2, strue2
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_sfalse2=new RewriteRuleSubtreeStream(adaptor,"token sfalse2",list_sfalse2);
            RewriteRuleSubtreeStream stream_strue2=new RewriteRuleSubtreeStream(adaptor,"token strue2",list_strue2);
            root_0 = (CommonTree)adaptor.nil();
            // 60:2: -> ^( IF ^( TRUE ( $strue2)+ ) ( ^( FALSE ( $sfalse2)+ ) )? implicit_comparison )
            {
                // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:60:5: ^( IF ^( TRUE ( $strue2)+ ) ( ^( FALSE ( $sfalse2)+ ) )? implicit_comparison )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(stream_IF.nextNode(), root_1);

                // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:60:10: ^( TRUE ( $strue2)+ )
                {
                CommonTree root_2 = (CommonTree)adaptor.nil();
                root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(TRUE, "TRUE"), root_2);

                if ( !(stream_strue2.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_strue2.hasNext() ) {
                    adaptor.addChild(root_2, stream_strue2.nextTree());

                }
                stream_strue2.reset();

                adaptor.addChild(root_1, root_2);
                }
                // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:60:27: ( ^( FALSE ( $sfalse2)+ ) )?
                if ( stream_sfalse2.hasNext() ) {
                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:60:27: ^( FALSE ( $sfalse2)+ )
                    {
                    CommonTree root_2 = (CommonTree)adaptor.nil();
                    root_2 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FALSE, "FALSE"), root_2);

                    if ( !(stream_sfalse2.hasNext()) ) {
                        throw new RewriteEarlyExitException();
                    }
                    while ( stream_sfalse2.hasNext() ) {
                        adaptor.addChild(root_2, stream_sfalse2.nextTree());

                    }
                    stream_sfalse2.reset();

                    adaptor.addChild(root_1, root_2);
                    }

                }
                stream_sfalse2.reset();
                adaptor.addChild(root_1, stream_implicit_comparison.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "implicitIfStatement"

    public static class ifStatement_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ifStatement"
    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:64:1: ifStatement : IF explicit_comparison THEN (strue1+= explicit_assignment )+ ( ELSE (sfalse1+= explicit_assignment )+ )? ENDIF -> ^( IF ^( TRUE ( $strue1)+ ) ( ^( FALSE ( $sfalse1)+ ) )? explicit_comparison ) ;
    public final AssignNWSParser.ifStatement_return ifStatement() throws RecognitionException {
        AssignNWSParser.ifStatement_return retval = new AssignNWSParser.ifStatement_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token IF12=null;
        Token THEN14=null;
        Token ELSE15=null;
        Token ENDIF16=null;
        List list_strue1=null;
        List list_sfalse1=null;
        AssignNWSParser.explicit_comparison_return explicit_comparison13 = null;

        RuleReturnScope strue1 = null;
        RuleReturnScope sfalse1 = null;
        CommonTree IF12_tree=null;
        CommonTree THEN14_tree=null;
        CommonTree ELSE15_tree=null;
        CommonTree ENDIF16_tree=null;
        RewriteRuleTokenStream stream_ENDIF=new RewriteRuleTokenStream(adaptor,"token ENDIF");
        RewriteRuleTokenStream stream_THEN=new RewriteRuleTokenStream(adaptor,"token THEN");
        RewriteRuleTokenStream stream_ELSE=new RewriteRuleTokenStream(adaptor,"token ELSE");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleSubtreeStream stream_explicit_assignment=new RewriteRuleSubtreeStream(adaptor,"rule explicit_assignment");
        RewriteRuleSubtreeStream stream_explicit_comparison=new RewriteRuleSubtreeStream(adaptor,"rule explicit_comparison");
        try {
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:65:2: ( IF explicit_comparison THEN (strue1+= explicit_assignment )+ ( ELSE (sfalse1+= explicit_assignment )+ )? ENDIF -> ^( IF ^( TRUE ( $strue1)+ ) ( ^( FALSE ( $sfalse1)+ ) )? explicit_comparison ) )
            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:67:2: IF explicit_comparison THEN (strue1+= explicit_assignment )+ ( ELSE (sfalse1+= explicit_assignment )+ )? ENDIF
            {
            IF12=(Token)match(input,IF,FOLLOW_IF_in_ifStatement257);  
            stream_IF.add(IF12);

            pushFollow(FOLLOW_explicit_comparison_in_ifStatement260);
            explicit_comparison13=explicit_comparison();

            state._fsp--;

            stream_explicit_comparison.add(explicit_comparison13.getTree());
            THEN14=(Token)match(input,THEN,FOLLOW_THEN_in_ifStatement265);  
            stream_THEN.add(THEN14);

            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:68:3: (strue1+= explicit_assignment )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==IDENT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:68:4: strue1+= explicit_assignment
            	    {
            	    pushFollow(FOLLOW_explicit_assignment_in_ifStatement273);
            	    strue1=explicit_assignment();

            	    state._fsp--;

            	    stream_explicit_assignment.add(strue1.getTree());
            	    if (list_strue1==null) list_strue1=new ArrayList();
            	    list_strue1.add(strue1.getTree());


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);

            // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:70:2: ( ELSE (sfalse1+= explicit_assignment )+ )?
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==ELSE) ) {
                alt9=1;
            }
            switch (alt9) {
                case 1 :
                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:70:3: ELSE (sfalse1+= explicit_assignment )+
                    {
                    ELSE15=(Token)match(input,ELSE,FOLLOW_ELSE_in_ifStatement281);  
                    stream_ELSE.add(ELSE15);

                    // C:\\Documents and Settings\\<username>\\My Documents\\Workspaces\\eclipse\\antlrAssign\\grammars\\AssignNWS.g:70:9: (sfalse1+= explicit_assignment )+
                    int cnt8=0;
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==IDENT) ) {
                            alt8=1;
                        }


                        switch (alt8) {
                    	case 1 :
